overflow repair

--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,9 @@ body{
     font-family: poppins;
 }
 
+.body__container{
+    overflow-x: hidden;
+}
 
 .container{
     margin: 0 80px;
